--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,21 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "JetBrains Mono", monospace;
 }
 
 .text-center {
   text-align: center;
 }
 
-.users{
+.centered {
+  width: 100%;
+  margin-top: 10px;
+  display: grid;
+  place-items: center;
+}
+
+/* COMMON COMP FOR BOTH USERS */
+.users {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,8 +31,10 @@ code {
   width: 350px;
   height: 350px;
   border: 2px solid black;
+  border-radius: 10px;
 }
 
+/* LIGHTS */
 .L1,
 .L2,
 .K1,
@@ -45,7 +46,8 @@ code {
   margin: 10px 0;
 }
 
-.Both-btns{
+/* BOTH BUTTONS - BOTH ON/OFF */
+.Both-btns {
   margin-top: 25px;
   display: flex;
   align-items: center;
@@ -53,7 +55,8 @@ code {
   gap: 30px;
 }
 
-.global-btns{
+/* GLOBAL BUTTONS - ALL ON/OFF */
+.global-btns {
   margin-top: 50px;
   display: flex;
   align-items: center;
@@ -61,7 +64,8 @@ code {
   gap: 55px;
 }
 
-/* ===================== */
+/* TOGGLE SWITCH STYLE */
+
 .toggle-switch {
   position: relative;
   display: inline-block;
@@ -110,22 +114,69 @@ code {
   transition: color 0.3s ease-in-out;
 }
 
-.toggle-switch input[type="checkbox"]:checked + .toggle-switch-handle {
+.toggle-switch input[type="checkbox"]:checked+.toggle-switch-handle {
   transform: translateX(45px);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2), 0 0 0 3px #05c46b;
 }
 
-.toggle-switch input[type="checkbox"]:checked + .toggle-switch-background {
+.toggle-switch input[type="checkbox"]:checked+.toggle-switch-background {
   background-color: #05c46b;
   box-shadow: inset 0 0 0 2px #04b360;
 }
 
-.toggle-switch input[type="checkbox"]:checked + .toggle-switch:before {
+.toggle-switch input[type="checkbox"]:checked+.toggle-switch:before {
   content: "On";
   color: #05c46b;
   right: -15px;
 }
 
-.toggle-switch input[type="checkbox"]:checked + .toggle-switch-background .toggle-switch-handle {
+.toggle-switch input[type="checkbox"]:checked+.toggle-switch-background .toggle-switch-handle {
   transform: translateX(40px);
+}
+
+/* COMMON BUTTON STYLES */
+
+.Common-button {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.2) 0 2px 4px, rgba(45, 35, 66, 0.15) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono", monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s, transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+}
+
+.Common-button:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.Common-button:hover {
+  box-shadow: rgba(45, 35, 66, 0.3) 0 4px 8px, rgba(45, 35, 66, 0.2) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.Common-button:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
 }
